@@ -1,14 +1,17 @@
 [main]
 encoding = utf-8
 version = 1.0.0
-serverAddress = http://www.zoo-project.org/zoo/
+serverAddress = http://localhost/cgi-bin/zoo_loader.cgi
 language = en-US
 lang = fr-FR,en-CA,en-US
 tmpPath=/tmp/
-tmpUrl = ../tmpPathRelativeToServerAdress/
+tmpUrl = ../temp/
 dataPath = /usr/com/zoo-project
 cacheDir = /tmp/
 templatesPath = /var/www/
+mapserverAddress = http://localhost/cgi-bin/mapserv
+msOgcVersion=1.0.0
+cors=true
 
 [identification]
 title = The ZOO-Project OGC WPS Development Server
@@ -41,3 +44,7 @@ host=pgbouncer
 type=PG
 schema=public
 
+[env]
+R_HOME=/usr/lib/R
+ITK_AUTOLOAD_PATH=/usr/lib/x86_64-linux-gnu/otb/applications/
+MODULE_LIBRARY_PATH=/usr/lib/x86_64-linux-gnu/saga/
