@@ -11,7 +11,6 @@ full_html_support=false
 partial_html_support=true
 wsUrl=ws://localhost:8888/
 publisherUrl=http://localhost/cgi-bin/publish.py?jobid=
-io_as_array=true
 
 [/]
 rel=self
@@ -40,7 +39,7 @@ rel=service-doc
 type=text/hml
 
 [api.html]
-href=https://demo.mapmint.com/swagger-ui/ogc-api-processes/
+href=http://localhost/swagger-ui/oapip/
 
 [api]
 method=get
